--- a/weather.html
+++ b/weather.html
@@ -1,7 +1,8 @@
-<DOCTYPE !>
+<DOCTYPE!>
 <html>
 	<head>
-
+		 <link rel="stylesheet" type="text/css" href="weather.css">
+		<title>Weather APP</title>
 	</head>
 
 	<body>
