--- a/index.html
+++ b/index.html
@@ -4,24 +4,13 @@
 		 <link rel="stylesheet" type="text/css" href="weather.css">
 		<title>Weather APP</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<script>
-jQuery(document).ready(function($) {
-  $.ajax({
-  url : "http://api.wunderground.com/api/Your_Key/geolookup/conditions/q/IA/Cedar_Rapids.json",
-  dataType : "jsonp",
-  success : function(parsed_json) {
-  var location = parsed_json['location']['city'];
-  var temp_f = parsed_json['current_observation']['temp_f'];
-  alert("Current temperature in " + location + " is: " + temp_f);
-  }
-  });
-});
-</script>
+		<script src="weather.js"></script>
+
 	</head>
 
 	<body>
-		
-		<span class="blink_me">Insert cool weather app here</span>
+		<div id="snow"></div>
+		<!-- <span class="blink_me">Insert cool weather app here</span> -->
 
 	</body>
 
