--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<body>
 		<div id="snow"></div>
 		<!-- <span class="blink_me">Insert cool weather app here</span> -->
+		<div id= "mainpage">
+
+			
+		</div>
 
 	</body>
 
