real submit bar
added it for real

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 		<div id="snow"></div>
 		<!-- <span class="blink_me">Insert cool weather app here</span> -->
 		<div id= "mainpage">
-
-			
+				<div id = "enterbar">			
+							<form action="action_page.php">
+				Enter Five Digit Zip Code:<br>
+				<input type="text" name="firstname">
+				<!-- <br>
+				Last name:<br>
+				<input type="text" name="lastname">
+				<br><br>
+				<input type="submit">
+				</form> -->
+					<button> Submit</button>
+				</div>
 		</div>
 		<div id = "test">
 
