--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 				<input type="submit">
 				</form> -->
 					<button> Submit</button>
+						
+						<p> This weather app is designed display your weather in a nicely with many features </p>
+
 				</div>
 		</div>
 		<div id = "test">
