changed header font size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 		<div id= "mainpage">
 				<div id = "enterbar">			
 							<form action="action_page.php">
+				<div id = "test">
 				Enter Five Digit Zip Code:<br>
+				</div>
 				<input type="text" name="firstname">
 				<!-- <br>
 				Last name:<br>
