--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<div id = "test">
 				Enter Five Digit Zip Code:<br>
 				</div>
+				<div id= "button">
 				<input type="text" name="firstname">
 				<!-- <br>
 				Last name:<br>
@@ -24,8 +25,9 @@
 				<br><br>
 				<input type="submit">
 				</form> -->
+					
 					<button> Submit</button>
-						
+						</div>
 						<p> This weather app is designed display your weather in a nicely with many features  </p>
 
 				</div>
