--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					
 					<button> Submit</button>
 						</div>
-						<p> This weather app is designed display your weather in a nicely with many features  </p>
+						<p> This weather app is designed to display weather with very nice features  </p>
 
 				</div>
 		</div>
