--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 			<center>
 					<form> 
 						<div id = "test">
-							Enter Five Digit Zip Code:<br>
+							<br>Enter Five Digit Zip Code:<br>
+						</div>
+						
+						<div id="state">
+							<input style="" type="text" id="userInput" placeholder="enter state here" />
+					    	<input style="" type="submit" onclick="return othername();" />
+
 						</div>
 						<div id="realenter">
-						 	<input style="" type="text" id="userInput" />
+						 	<input style="" type="text" id="userInput" placeholder="enter city here" />
 					    	<input style="" type="submit" onclick="return othername();" />
 						</div>
 					</form>
