finally does something

--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
 							<br>Enter Five Digit Zip Code:<br>
 						</div>
 						
-						<div id="state">
+						<!-- <div id="state">
 							<input style="" type="text" id="userInput" placeholder="enter state here" />
-					    	<input style="" type="submit" onclick="return othername();" />
+					    	
 
-						</div>
+						</div> -->
 						<div id="realenter">
-						 	<input style="" type="text" id="userInput" placeholder="enter city here" />
-					    	<input style="" type="submit" onclick="return othername();" />
-						</div>
+						 	<input style="" type="text" id="userInput" placeholder="enter state here" />
+						 	<input style="" type="text" id="newTest" placeholder="enter city here" />
+					    	<input style="" type="submit" onclick="return othername();"  />
 					</form>
 			</center>
 						<div id= "dataoutput">
 
+						</div>
 
 
 						</div>
