it actually changes divs

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
         </div>
         <div id="project_page">
-        	<p>akjwbfkawfbkuwabkwaf</p>
+        	<div id ="useless">
+
+        	</div>	
 
         </div>
 
