--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Weather APP</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
         <script src="weather.js"></script>
-
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     </head>
 
     <body>
@@ -37,9 +37,7 @@
            
                     </form>
                 </center>
-                <div id="dataoutput">
-
-                </div>
+                
 
 
                 </div>
@@ -70,6 +68,10 @@
         <div id="test">
 
         </div>
+       	<div id="dataoutput">
+
+                </div>
+
         <div id="project_page">
         	<div id ="useless">
 
