--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 						</div> -->
                         <div id="realenter">
-                            <input style="" type="text" id="userInput" placeholder="enter state initals here(CAPS)" />
-                            <input style="" type="text" id="newTest" placeholder="enter city here(CAPITIALIZE first letter)" />
+                            <input style="" type="text" id="userInput" placeholder="enter state initals here" />
+                            <input style="" type="text" id="newTest" placeholder="enter city here" />
                            
                             <input style="" type="submit" class="button" onclick="return othername();" />
            
