--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					
 					<button> Submit</button> -->
                 <div id="instructions">
-                    <p> This weather app is designed to display the most useless weather facts you'll never ever need to know. For the states box please write the initals of the desired state in CAPITAL LETTERS. For the city please CAPITALIZE only the first letter and make sure its the correct spelling or it wont display weather. </p>
+                    <p> This weather app is designed to display the most useless weather facts you'll never ever need to know. For the states box please write the initials of the desired state in CAPITAL LETTERS. For the city please CAPITALIZE only the first letter and make sure it's the correct spelling or it won't display weather. </p>
 
                 </div>
             </div>
